--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,75 +1,158 @@
-body {
+* {
 	margin: 0;
 	padding: 0;
-	font-family: sans-serif;
-	background-color: #f2f2f2;
+	box-sizing: border-box;
 }
 
-.movie-card {
-	background-color: #fff;
-	border: 0;
-	box-shadow: 0 -1px 0 #e0e0e0, 0 0 2px rgba(0, 0, 0, 0.12), 0 2px 4px rgba(0, 0, 0, 0.24);
-	padding: 1rem;
-	cursor: pointer;
-	position: relative;
-	margin: 1rem auto;
+body {
+	width: 90%;
+	margin: 0 auto;
+	background-color: #141414;
+	font-family: 'Quicksand', sans-serif;
 }
 
-.movie-director {
-	padding: 4px 0;
-	font-size: 0.8rem;
+.header {
+	height: 7.5vh;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
 
-.saved-list {
-	background-color: #fff;
-	border: 0;
-	box-shadow: 0 -1px 0 #e0e0e0, 0 0 2px rgba(0, 0, 0, 0.12), 0 2px 4px rgba(0, 0, 0, 0.24);
-	padding: 1rem;
-	cursor: pointer;
-	position: relative;
-	margin: 1rem auto;
-	width: 75%;
+.logo-container {
 	display: flex;
 	align-items: center;
-	justify-content: space-between;
 }
 
-.saved-list h3 {
-  	margin-right: 10px;
+.logo-container img {
+	height: 31px;
+	margin-right: 32px;
+}
+
+.logo-container h2 {
+	margin-right: 16px;
+	font-size: 16px;
+	color: whitesmoke;
+}
+
+.icon {
+	height: 32px;
+}
+
+.movie-container h3 {
+	margin-top: 32px;
+	margin-bottom: 16px;
+	font-size: 26.88px;
+	color: whitesmoke;
+}
+
+.movies {
+	display: flex;
+}
+
+.movie {
+	margin-right: 32px;
+}
+
+.movie img{
+	width: 293.16px;
+}
+
+.saved-movies-container h3 {
+	margin-top: 32px;
+	margin-bottom: 16px;
+	font-size: 26.88px;
+	color: whitesmoke;
+}
+
+.movie-information-container {
+	margin-top: 32px;
+	display: flex;
+}
+
+.movie-information-container img{
+	width: 293.16px;
+	margin-right: 32px;
+}
+
+.movie-information-container h3 {
+	margin-bottom: 8px;
+	font-size: 26.88px;
+	color: whitesmoke;
+}
+
+.movie-information-container h4 {
+	margin-top: 8px;
+	font-size: 20px;
+	font-weight: 600;
+	color: whitesmoke;
+}
+
+.movie-information-container p {
+	font-size: 18px;
+	font-weight: 400;
+	color: whitesmoke;
+}
+
+.movie-information-container p:last-child {
+	margin-bottom: 16px;
+}
+
+.movie-information-container button {
+	margin-right: 16px;
+	padding: 8px 16px;
+	background: whitesmoke;
+	border: none;
+	border-radius: 5px;
+	font-family: 'Quicksand', sans-serif;
+	font-size: 14px;
+	font-weight: 500;
+	cursor: pointer;
+}
+
+.saved-movies-container {
+	margin-bottom: 64px;
 }
 
 .saved-movie {
-  	margin: 0 10px;
-}
-.saved-active {
-	color: blue;
-	border: 1px solid grey;
-	padding: 5px;
-}
-.save-wrapper {
-	position: relative;
-	width: 75%;
-	margin: 1rem auto;
-}
-.save-button {
-	position: absolute;
-	top: 25px;
-	right: 25px;
-	border: 1px solid grey;
-	padding: 5px 10px;
-	background-color: lightseagreen;
-}
-.save-button:hover {
-	background-color: green;
-	color: white;
+	width: 293.16px;
 }
 
-.home-button {
-	padding: 5px 10px;
-	background-color: lightskyblue;
+.edit-movie-container h2 {
+	margin-top: 32px;
+	margin-bottom: 16px;
+	font-size: 26.88px;
+	color: whitesmoke;
 }
 
-.movie-warning {
-	color: red;
-	text-align: center;
+.edit-movie-container form {
+	width: 500px;
+	display: flex;
+	flex-direction: column;
+}
+
+.edit-movie-container form label {
+	margin-bottom: 8px;
+	font-weight: 500;
+	color: whitesmoke;
+}
+
+.edit-movie-container form input {
+	margin-bottom: 16px;
+	padding: 12px 20px;
+	background: whitesmoke;
+	border: none;
+	border-radius: 5px;
+	font-family: 'Quicksand', sans-serif;
+	font-size: 14px;
+	font-weight: 500;
+}
+
+.edit-movie-container form button {
+	padding: 12px 20px;
+	background: whitesmoke;
+	border: none;
+	border-radius: 5px;
+	font-family: 'Quicksand', sans-serif;
+	font-size: 14px;
+	font-weight: 500;
 }
